# read-android

./: .gitignore  .project  AndroidManifest.xml  README.md  proguard.cfg  project.properties
assets/: cpa.properties
assets/buildin/: 30000002.epub  30069576.epub  30167420.epub  30188296.epub  ebook_builtin
assets/css/: css-color  external~android.css  main~android.css
assets/hyphen/: ushyph.tex
jni/libjdrdrm/: .libebr.mk.swp  Android.mk  Application.mk  DRMLib.h  __b.c  __b.h  build-libebr.sh  jddecompress.cpp  jddecompress.h  jddrm.c  libebr.mk
jni/libjdrebr/: .Android.mk.swp  .Application.mk.swp  .build-libebr.sh.swp  Android.mk  DRM_API.sln  common.gypi  gengyp.cmd  makefile_EncTool  makefile_Linux_a  makefile_Linux_so  makefile_iphoneos  makefile_iphonesimulator
jni/libjdrebr/JNI_Server/: CMakeLists.txt  com_jd_ebook_rights_rpc_drm_DrmLib.cpp  com_jd_ebook_rights_rpc_drm_DrmLib.h  jni_server_test.java
jni/libunibreak/: Android.mk  Application.mk  LineBreaker.cpp
libs/: .gitignore
res/anim/: activity_left_in.xml  activity_left_out.xml  activity_right_in.xml  activity_right_out.xml  alpha_in.xml  alpha_in_shorttime.xml  alpha_out.xml  alpha_out_shorttime.xml  bookshelf_bottombar_hide.xml  bookshelf_bottombar_show.xml  bookshelf_topbar_hide.xml  bookshelf_topbar_show.xml  color_picker_push_down_out.xml  fade.xml  fade_in.xml  hold.xml  indeterminate_progress_style.xml  left_alpha_out.xml  left_in.xml  left_out.xml  loading_book_anim.xml  menu_bottombar_in.xml  menu_bottombar_out.xml  read_bookmark_rotate_to_down.xml  read_bookmark_rotate_to_up.xml  (+2 more)
(+1529 files in other folders)
